syntax = "proto3";

option go_package = "github.com/MelihcanSrky/Go-gRPC/proto/proto";

package proto;

service Translator {
    rpc Translate(TranslationRequest) returns (TranslationResponse) {}
}

message TranslationRequest {
    string text = 1;
    string source_language = 2;
    string target_language = 3;
}

message TranslationResponse {
    string translated_text = 1;
}